--- a/Develop/index.html
+++ b/Develop/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <meta name="viewport" content=""width=device-width, initial-scale="1.0" />
+    <meta name="description" content="Horiseon Home page" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Horiseon:Social Solution Services, Inc.</title>
 </head>
 
