deleted lots of repeat css

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+    <header>
+    <!--this section contains main navigation bar and big image -->
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
@@ -24,6 +26,10 @@
             </ul>
         </div>
     </div>
+    </header>
+
+
+    <!-- this section contains the main body of the page-->
     <div class="hero"></div>
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
@@ -48,6 +54,9 @@
             </p>
         </div>
     </div>
+
+
+    <!-- this section is the right hand section-->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -77,6 +86,8 @@
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </div>
+
+
 </body>
 
 </html>
