--- a/Develop/index.html
+++ b/Develop/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content=""width=device-width, initial-scale="1.0" />
+    <meta name="description" content="Horiseon Home Page" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon:Social Solution Services, Inc.</title>
 </head>
@@ -11,18 +13,12 @@
     <header>
     <!--this section contains main navigation bar and big image -->
     <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+    <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
+                <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
+                <li><a href="#online-reputation-management">Online Reputation Management</a></li>
+                <li><a href="#social-media-marketing">Social Media Marketing</a></li>
             </ul>
         </div>
     </div>
@@ -30,14 +26,13 @@
 
 
     <!-- this section contains the main body of the page-->
-    <div class="hero"></div>
+    <div class="hero">
+    </div>
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
+            <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business. </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
@@ -80,12 +75,14 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+
+    <!-- Footer Section-->
+    <footer>
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>>
 
 
 </body>
