--- a/Develop/index.html
+++ b/Develop/index.html
@@ -12,40 +12,45 @@
 <body>
     <header>
     <!--this section contains main navigation bar and big image -->
-    <div class="header">
+    <nav>
     <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
-                <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
-                <li><a href="#online-reputation-management">Online Reputation Management</a></li>
-                <li><a href="#social-media-marketing">Social Media Marketing</a></li>
+                <li><a href="#optimization">Search Engine Optimization</a></li>
+                <li><a href="#management">Online Reputation Management</a></li>
+                <li><a href="#marketing">Social Media Marketing</a></li>
             </ul>
         </div>
-    </div>
+    </nav>
     </header>
 
-
+    <div class="cover-image"></div>
     <!-- this section contains the main body of the page-->
-    <div class="hero">
-    </div>
     <div class="content">
-        <div id="search-engine-optimization" class="search-engine-optimization">
+        <div id="optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt= "Notebook with five semantic areas." class="float-left" />
             <h2>Search Engine Optimization</h2>
-            <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business. </p>
+            <p>The dominance of mobile internet use means that users are searching for the right business as they travel, 
+                shop, or sit on their couch at home. Search Engine Optimization (SEO) allows 
+                you to increase your visibility and find the right customers for your business. 
+            </p>
         </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        <div id="management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="Bar graph with reputation increasing." class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                The web is full of opinions, and some of these can be negative. Social media allows anyone with an 
+                internet connection to say whatever they want about your business. Online Reputation Management gives you the control 
+                over what potential customers see when they search for your business.
             </p>
         </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        <div id="marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="Different media tools on a table." class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                Social media continues to have a sizable influence on buying habits. 
+                Social media marketing helps you determine which platforms are suited to your brand, 
+                using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
     </div>
