--- a/Develop/index.html
+++ b/Develop/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content=""width=device-width, initial-scale="1.0" />
+    <meta name="viewport" content=""width=device-width, initial-scale="1.0" /> 
     <meta name="description" content="Horiseon Home Page" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon:Social Solution Services, Inc.</title>
@@ -11,22 +11,25 @@
 
 <body>
     <header>
-    <!--this section contains main navigation bar and big image -->
-    <nav>
-    <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <!--this section contains main navigation bar and big image -->
+        <nav>
+            <h1>Hori<span>seo</span>n</h1>
             <ul>
                 <li><a href="#optimization">Search Engine Optimization</a></li>
                 <li><a href="#management">Online Reputation Management</a></li>
                 <li><a href="#marketing">Social Media Marketing</a></li>
             </ul>
-        </div>
-    </nav>
+        </nav>
     </header>
 
-    <div class="cover-image"></div>
-    <!-- this section contains the main body of the page-->
-    <div class="content">
+    <div class="cover-image">
+    <!-- this div is solely for the big image due to its size-->
+    </div>
+
+    <!-- this section contains the main body of the page. Each box has the title, img and text.
+    The image floats according to its class name. The id is for the link.-->
+    <section class="main">
+
         <div id="optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt= "Notebook with five semantic areas." class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -35,6 +38,7 @@
                 you to increase your visibility and find the right customers for your business. 
             </p>
         </div>
+
         <div id="management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="Bar graph with reputation increasing." class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -44,6 +48,7 @@
                 over what potential customers see when they search for your business.
             </p>
         </div>
+
         <div id="marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="Different media tools on a table." class="float-left" />
             <h2>Social Media Marketing</h2>
@@ -53,11 +58,14 @@
                 using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
+
+    </section>
 
 
-    <!-- this section is the right hand section-->
-    <div class="benefits">
+    <!-- This section is the box on the right hand (benefit section). The sections are each
+    div. I've sepated them with some white space so that it is readable. Each box has the header,img and text.-->
+    <section class="side-bar">
+
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Gear being turned into money."/>
@@ -65,6 +73,7 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
+
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Light buld with sound waves"/>
@@ -72,6 +81,7 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
+
         <div class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Gear with money symbols"></img>
@@ -79,9 +89,10 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
 
-    <!-- Footer Section-->
+    </section>
+
+    <!-- Footer Section is for the copyright and final message-->
     <footer>
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
