Combined more css,added a main section

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -23,14 +23,14 @@
     </header>
 
     <div class="cover-image">
-    <!-- this div is solely for the big image due to its size-->
+    <!-- This div is solely for the big image due to its size-->
     </div>
 
-    <!-- this section contains the main body of the page. Each box has the title, img and text.
+    <!-- This section contains the main body of the page. Each box has title, img and text.
     The image floats according to its class name. The id is for the link.-->
-    <section class="main">
+    <main>
 
-        <div id="optimization" class="search-engine-optimization">
+        <div id="optimization" class="online-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt= "Notebook with five semantic areas." class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>The dominance of mobile internet use means that users are searching for the right business as they travel, 
@@ -39,7 +39,7 @@
             </p>
         </div>
 
-        <div id="management" class="online-reputation-management">
+        <div id="management" class="online-optimization">
             <img src="./assets/images/online-reputation-management.jpg" alt="Bar graph with reputation increasing." class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -49,7 +49,7 @@
             </p>
         </div>
 
-        <div id="marketing" class="social-media-marketing">
+        <div id="marketing" class="online-optimization">
             <img src="./assets/images/social-media-marketing.jpg" alt="Different media tools on a table." class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -59,14 +59,14 @@
             </p>
         </div>
 
-    </section>
+    </main>
 
 
-    <!-- This section is the box on the right hand (benefit section). The sections are each
-    div. I've sepated them with some white space so that it is readable. Each box has the header,img and text.-->
-    <section class="side-bar">
+    <!-- This section is the box on the right hand (benefits section). The sections are each
+    div. I've separated them with some white space so that it is readable. Each box has a header,img and text.-->
+    <aside class="side-bar">
 
-        <div class="benefit-lead">
+        <div class="benefits">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Gear being turned into money."/>
             <p>
@@ -74,7 +74,7 @@
             </p>
         </div>
 
-        <div class="benefit-brand">
+        <div class="benefits">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Light buld with sound waves"/>
             <p>
@@ -82,7 +82,7 @@
             </p>
         </div>
 
-        <div class="benefit-cost">
+        <div class="benefits">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Gear with money symbols"></img>
             <p>
@@ -90,17 +90,16 @@
             </p>
         </div>
 
-    </section>
-
-    <!-- Footer Section is for the copyright and final message-->
-    <footer>
-        <h4>Made with ❤️️ by Horiseon</h4>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
-    </footer>>
-
+    </aside>
 
 </body>
+
+ <!-- Footer Section is for the copyright and final message-->
+<footer>
+    <h4>Made with ❤️️ by Horiseon</h4>
+    <p>
+        &copy; 2019 Horiseon Social Solution Services, Inc.
+    </p>
+</footer>>
 
 </html>
